--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "csv-parse": "^4.15.3",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1",
+    "moment": "^2.29.3",
     "request": "^2.88.2",
-    "winston": "2.3.1"
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
